 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####      Quake Army Knife 6.6 Changelog


6.6.0 Beta 7
============
* [DanielPharos]: Implemented double buffering for the wireframe renderer, which results
          - in a very large performance improvement on modern operating systems.

* [DanielPharos]: Added Urban Terror 4 addon.

* [DanielPharos]: Improved fog/fade of the software renderer to match Glide more closely.

* [DanielPharos]: Also cache texture sizes during brushdef loading for a big speed improvement.

* [DanielPharos]: Vast improvements to the OpenGL lighting quality and performance.

* [DanielPharos]: Added support for loading and saving of new KMQuake2 surface color data.

* [DanielPharos]: Improved the software renderer to use 16-bit floating point depth buffering.

* [DanielPharos]: Added experimental Genesis3D .bsp file loading and saving support.

* [DanielPharos]: Quake 3 BSP file loader can now handle faces that have vertices that lay on
          - a single line.

* [DanielPharos]: Made the Open and Save dialogs resizable (only supported on Windows 98,
          - Windows 2000, and higher).

* [DanielPharos]: Prevent hotkeys from triggering functions when the corresponding menu item
          - is disabled.

* [DanielPharos]: Read and write support for the id-specific for solids and faces in .vmf files.

* [DanielPharos]: Updated all addons to use "trigger" texture for trigger entities by default.

* [DanielPharos]: Fixed solid color mode not working in Software and Glide renderers.

* [DanielPharos]: Provide a new setting for the software renderer to limit the maximum
          - resolution at which it renders. This used to be the case, but this code was broken