@@ -14,6 +14,8 @@
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Implemented Scroll Lock support in treeviews.
+
 * [DanielPharos]: Implemented double buffering for the wireframe renderer, which results
           - in a very large performance improvement on modern operating systems.
 
